# SICrMLB-Models

./: .gitignore  README.md  pyproject.toml
sicrmlb_models/: _types.py  build_dataset.py  test_yolov11.py  train_yolov11.py
sicrmlb_models/datasets/cards/: manifest.csv  stats.json
workflows/: colab_workflow.ipynb
